[package]
name = "db2_fdw"
version = "0.3.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = "debuginfo"
lto = true

[dependencies]
wit-bindgen-rt = "0.44.0"
serde_json = "1.0.145"

[package.metadata.component]
package = "dercosa:db2-fdw"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"supabase:wrappers" = { path = "./supabase-wrappers-wit" }
